[project]
name = "openev-csa"
version = "0.1.0"
description = "Customer Support Agent for OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "pandas",
    "openai",
    "openenv-core",
    "python-dotenv",
    "requests",
]

[project.scripts]
server = "my_env.server.app:main"
