[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_env"
version = "2.0.0"
description = "OpenEnv Customer Support Environment — 15 tasks, 3 tiers, RL-ready"
authors = [{name = "Darshankumarr03"}]
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0",
    "fastapi",
    "uvicorn",
]

[project.scripts]
server = "my_env.server.app:main"
